--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 .wrapper {
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -22,7 +22,7 @@ body {
 }
 
 .game-status {
-    height: 20%;
+    height: 20vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -32,21 +32,33 @@ body {
 .game-status h1 {
     font-weight: 700;
     color: #fff;
-    font-size: 24px;
+    font-size: calc(2vh + 2vw);
+}
+@media screen and (min-width: 1200px) {
+    .game-status h1 {
+        font-size: 36px;
+    }
 }
 
-/*.game-status .results {
-
-}*/
+.game-status .results {
+    display: flex;
+    vertical-align: center;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    margin-top: 1vh;
+    font-size: calc(1vh + 1vw);
+}
 
 .game-board {
     display: grid;
-    grid-template-columns: repeat(3, 150px);
-    grid-template-rows: repeat(3, 120px);
+    grid-template-columns: repeat(3, 12vh);
+    grid-template-rows: repeat(3, 11vh);
     gap: 6px;
-    width: 100%;
-    height: 60%;
+    width: 100vw;
+    height: 60vh;
     justify-content: center;
+    align-content: center;
 }
 
 .game-board .cell {
@@ -54,6 +66,13 @@ body {
     cursor: pointer;
     border-radius: 4px;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    font-size: calc(2.5vh + 2.5vw);
+}
+.game-board .cell:disabled {
+    pointer-events: none;
 }
 .game-board .cell:hover {
     background-color: rgb(66, 34, 211);
@@ -82,3 +101,4 @@ body {
 .btn button:active {
     background-color: rgb(99, 66, 243);
 }
+
