--- a/style.css
+++ b/style.css
@@ -1,105 +1,104 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    transition: 0.4s;
-    font-family: 'Poppins', sans-serif;
-    font-weight: normal;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  transition: 0.4s;
+  font-family: "Poppins", sans-serif;
+  font-weight: normal;
 }
 
 body {
-    height: 100vh;
+  height: 100vh;
 }
 
 .wrapper {
-    position: fixed;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    background-color: rgb(20, 22, 35);
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(20, 22, 35);
 }
 
 .game-status {
-    height: 20vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  height: 20vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .game-status h1 {
-    font-weight: 700;
-    color: #fff;
-    font-size: calc(2vh + 2vw);
+  font-weight: 700;
+  color: #fff;
+  font-size: calc(2vh + 2vw);
 }
 @media screen and (min-width: 1200px) {
-    .game-status h1 {
-        font-size: 36px;
-    }
+  .game-status h1 {
+    font-size: 36px;
+  }
 }
 
 .game-status .results {
-    display: flex;
-    vertical-align: center;
-    align-items: center;
-    justify-content: center;
-    color: #fff;
-    margin-top: 1vh;
-    font-size: calc(1vh + 1vw);
+  display: flex;
+  vertical-align: center;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  margin-top: 1vh;
+  font-size: calc(1vh + 1vw);
 }
 
 .game-board {
-    display: grid;
-    grid-template-columns: repeat(3, 12vh);
-    grid-template-rows: repeat(3, 11vh);
-    gap: 6px;
-    width: 100vw;
-    height: 60vh;
-    justify-content: center;
-    align-content: center;
+  display: grid;
+  grid-template-columns: repeat(3, 12vh);
+  grid-template-rows: repeat(3, 11vh);
+  gap: 6px;
+  width: 100vw;
+  height: 60vh;
+  justify-content: center;
+  align-content: center;
 }
 
 .game-board .cell {
-    background-color: rgba(43, 48, 78, 0.268);
-    cursor: pointer;
-    border-radius: 4px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #fff;
-    font-size: calc(2.5vh + 2.5vw);
+  background-color: rgba(43, 48, 78, 0.268);
+  cursor: pointer;
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  font-size: calc(2.5vh + 2.5vw);
 }
 .game-board .cell:disabled {
-    pointer-events: none;
+  pointer-events: none;
 }
 .game-board .cell:hover {
-    background-color: rgb(66, 34, 211);
+  background-color: rgb(66, 34, 211);
 }
 
 .btn {
-    height: 20%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  height: 20%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .btn button {
-    width: 150px;
-    height: 50px;
-    border-radius: 6px;
-    border: none;
-    background-color: rgb(66, 34, 211);
-    color: #fff;
-    cursor: pointer;
-    transition: background-color 0.15s;
+  width: 150px;
+  height: 50px;
+  border-radius: 6px;
+  border: none;
+  background-color: rgb(66, 34, 211);
+  color: #fff;
+  cursor: pointer;
+  transition: background-color 0.15s;
 }
 .btn button:hover {
-    background-color: rgb(48, 22, 162);
+  background-color: rgb(48, 22, 162);
 }
 .btn button:active {
-    background-color: rgb(99, 66, 243);
+  background-color: rgb(99, 66, 243);
 }
-
